--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,9 +53,6 @@
           <li class="nav-item flex-fill" role="presentation">
             <button class="nav-link w-100" id="profile-tab" data-bs-toggle="tab" data-bs-target="#bordered-justified-profile" type="button" role="tab" aria-controls="profile" aria-selected="false">ViaSat</button>
           </li>
-          <li class="nav-item flex-fill" role="presentation">
-            <button class="nav-link w-100" id="contact-tab" data-bs-toggle="tab" data-bs-target="#bordered-justified-contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Adresses</button>
-          </li>
         </ul>
         <div class="tab-content pt-2" id="borderedTabJustifiedContent">
           <div class="tab-pane fade show active" id="bordered-justified-home" role="tabpanel" aria-labelledby="home-tab">
@@ -472,6 +469,9 @@
               </div><!-- End Customers Card -->
 
                 <div class="col-xxl-6 col-md-6">
+                <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Postes ViaSat En Ligne</h5>
                   <div id="posteon" style="min-height: 400px;" class="echart"></div>
                   <script>
                     document.addEventListener("DOMContentLoaded", () => {
@@ -497,7 +497,7 @@
                                       data: [
                                         {
                                           value: data.up,
-                                          name: 'UP Postes'
+                                          name: 'En Ligne'
                                         }
                                       ]
                                     }
@@ -509,8 +509,13 @@
                     });
                   </script>
                 </div>
+                </div>
+                </div>
 
                 <div class="col-xxl-6 col-md-6">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title text-center">Postes ViaSat En Panne</h5>
                   <div id="posteoff" style="min-height: 400px;" class="echart"></div>
                   <script>
                     document.addEventListener("DOMContentLoaded", () => {
@@ -536,7 +541,7 @@
                                       data: [
                                         {
                                           value: data.down,
-                                          name: ''
+                                          name: 'En Panne'
                                         }
                                       ]
                                     }
@@ -548,9 +553,13 @@
                     });
                   </script>
                 </div>
+                </div>
+                </div>
 
 
-
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Articles En Panne</h5>
                 <div id="radarChart" style="min-height: 400px;" class="echart"></div>
 
                 <script>
@@ -616,11 +625,9 @@
 
 
               </div>
+              </div>
+              </div>
             </section>
-          </div>
-
-          <div class="tab-pane fade" id="bordered-justified-contact" role="tabpanel" aria-labelledby="contact-tab">
-            Saepe animi et soluta ad odit soluta sunt. Nihil quos omnis animi debitis cumque. Accusantium quibusdam perspiciatis qui qui omnis magnam. Officiis accusamus impedit molestias nostrum veniam. Qui amet ipsum iure. Dignissimos fuga tempore dolor.
           </div>
         </div><!-- End Bordered Tabs Justified -->
 
