--- a/src/main/resources/templates/shared/sidebar.html
+++ b/src/main/resources/templates/shared/sidebar.html
@@ -84,7 +84,7 @@
 
 
 
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-nae" data-bs-toggle="collapse"
                    th:classappend="${#request.requestURI.startsWith('/position')} ? ' ' : 'collapsed'" href="#">
                     <i class="bi bi-geo-alt-fill"></i><span>Positions</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -96,11 +96,11 @@
                         </a>
                     </li>
                 </ul>
-            </li>
+            </li>-->
 
 
 
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-na" data-bs-toggle="collapse"
                    th:classappend="${#request.requestURI.startsWith('/responsable')} ? ' ' : 'collapsed'" href="#">
                     <i class="bi bi-people-fill"></i><span>Responsables</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                 </ul>
-            </li>
+            </li>-->
 
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#components-et" data-bs-toggle="collapse"
